--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,4 +3,8 @@
 <h1>Home</h1>
 <p> <%= homeStartingContent %> </p>
 
+    <% for(var i=0; i<posts.length;i++){ %>
+      <h1> <%= posts[i].title %> </h1>
+      <p> <%= posts[i].content %></p>
+    <% } %>
 <%- include("partials/footer") -%>
